# Scraper

./: Dockerfile  README.md  constants.py  docker-compose.yml  main.py  movies_statistics.py  pyproject.toml  scraper.py  statistics.py
tests/: scraper_test.py  statistics_test.py
utils/: constants.py  logger.py  movies_plots.py  movies_utils.py
