[tool.poetry]
name = "hdrezkascraper"
version = "0.1.0"
description = ""
authors = ["Pavel Miskevich <chiki-takipavel@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
redis = "^4.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
